[package]
name = "config-center"
version = "0.1.0"
edition = "2021"
authors = ["hengheng8848@gmail.com"]
description = "A distributed configuration center built with Rust"
license = "MIT"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.7"
actix-cors = "0.7.1"
warp = "0.3"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
deadpool-postgres = "0.14"

# Cache
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Raft
raft = "0.7"
protobuf = { version = "3.7", features = ["with-bytes"] }

# Authentication & Authorization
casbin = "2.0"
jsonwebtoken = "9.2"
bcrypt = "0.17"

# Monitoring & Metrics
prometheus = "0.13"
metrics = { version = "0.24" }
metrics-exporter-prometheus = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1.0"
config = "0.15"
dotenv = "0.15"
validator = { version = "0.20", features = ["derive"] }
dashmap = "6.1"
flate2 = "1.0"
sysinfo = "0.33"
typed-arena = "2.0"
governor = "0.8"

# Encryption and Hashing
aes-gcm = "0.10.3"
base64 = "0.22"
sha2 = "0.10.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
test-log = "0.2"
wiremock = "0.6"
tempfile = "3.10"

[[bin]]
name = "config-center"
path = "src/main.rs"

# [features]
# default = []
# test = ["mockall", "wiremock"]
