[workspace]
members = [
    "config_common",
    "config_core",
    "config_raft",
    "config_storage",
    "config_api",
    "config_audit",
    "config_proto",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hengheng8848"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1" }

# Web framework
actix-web = "4.5"
tonic = "0.13"
prost = "0.13"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
] }
redis = { version = "0.29.2", features = ["tokio-comp"] }

# Auth
casbin = { version = "2.8", features = [
    "runtime-tokio",
    "logging",
    "incremental",
] }
jsonwebtoken = "9.2"

# Logging & monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.14"

# Configuration
config = "0.15"
dotenv = "0.15"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# Testing
mockall = "0.13"
