[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
common = { path = "../common" }
core = { path = "../core" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Web framework
actix-web.workspace = true
tonic.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true