[package]
name = "config-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
config-common = { path = "../config-common" }
config-core = { path = "../config-core" }
config-proto = { path = "../config-proto" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Web framework
actix-web.workspace = true
tonic.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# gRPC
prost.workspace = true

[dev-dependencies]
mockall.workspace = true

[build-dependencies]
tonic-build = "0.13"
