[package]
name = "config-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
config-common = { path = "../config-common" }
config-core = { path = "../config-core" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Database
sqlx.workspace = true

# Cache
redis.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true 