[package]
name = "monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
common = { path = "../common" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Metrics
prometheus.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
mockall.workspace = true 